# predictive-prescriptive-process-mining

./: Makefile  README.md  env-example  main.py  pyproject.toml
api/: RWLock.py  __init__.py  startup.py
api/endpoints/: __init__.py  admin.py  predict.py  utils.py
api/schemas/: BackupRequest.py  NewDatasetRequest.py  PredictContentRequest.py  PredictRequest.py  RetrainRequest.py  StatusModel.py
core/: __init__.py  backups.py  builder.py  constants.py
core/llm/: GeminiTemplates.py  OllamaActivities.py  OllamaContentExtractor.py  OllamaContextParser.py  __init__.py
core/llm/prompts/: gemini_templates.py  ollama_activities.py  ollama_extractor_system.py
core/models/: __init__.py
core/models/activity/: nGramBackoffEdoc.py  nGramBackoffNormal.py
core/models/content/: ContentPredictModel.py  DynamicDeterministicExtractor.py  ExtractContentModel.py  TemplateHandler.py
dataset/: metadata.json  templates.csv  test.csv  train.csv
